<resources>
    <string name="setting_title">系统设置</string>
    <string name="setting_role_verify">实名认证</string>
    <string name="setting_role_verify_done">已认证</string>
    <string name="setting_account_safe">账号安全</string>
    <string name="setting_bind_alipay">绑定支付宝</string>
    <string name="setting_bind_bankcard">绑定银行卡</string>
    <string name="setting_message_notify">消息通知</string>
    <string name="setting_say_hi">打招呼设置</string>
    <string name="setting_black_list">黑名单</string>
    <string name="setting_cancel_black_list">解除</string>
    <string name="setting_help">帮助</string>
    <string name="setting_teenager">青少年模式</string>
    <string name="setting_change_acount">切换账号</string>
    <string name="setting_login_out">退出登录</string>
    <string name="setting_role_verify_name">姓名  </string>
    <string name="setting_role_verify_name_hint">请输入真实姓名</string>
    <string name="setting_role_verify_card_number">证件号码让他</string>
    <string name="setting_role_verify_card_number_hint">请输入证件号码</string>
    <string name="setting_submit">提交</string>
    <string name="setting_confirm">确定</string>
    <string name="setting_save">保存</string>
    <string name="setting_role_verify_tips1">1.姓名和证件号码必须为本人，实名认证绑定后无法修改</string>
    <string name="setting_role_verify_tips2">2.如果有提现需求，我们将以实名信息为准，请确保信息真实性</string>
    <string name="setting_role_verify_digits">0123456789X</string>
    <string name="setting_phone_number">手机号码</string>
    <string name="setting_phone_log_off">注销账号</string>
    <string name="setting_set_login_password">设置密码</string>
    <string name="setting_forget_password">修改密码</string>
    <string name="setting_find_password">找回密码</string>
    <string name="setting_bind_phone_number">手机号绑定</string>
    <string name="setting_bind_phone_number_hint">请输入手机号码</string>
    <string name="setting_bind_phone_number_now">当前绑定手机号</string>
    <string name="setting_sms_code">验证码</string>
    <string name="setting_sms_code_hint">请输入验证码</string>
    <string name="setting_get_sms_code">获取验证码</string>
    <string name="setting_request_log_off_account">为保证你的账号安全，在你提交的注销申请生效前，需同时满足以下条件：</string>
    <string name="setting_log_off_account_tips1">账号注销不是退出登录，注销后将清空所有数据且不可恢复</string>
    <string name="setting_log_off_account_tips2">账号财产已清算\n没有资产，未结清的资产和虚拟权益，本账号及通过本账号接入第三方中没有未完成或存在争议的服务</string>
    <string name="setting_log_off_account_tips3">账号权限解除\n账号已解除与其他从的授权登录或绑定关系</string>
    <string name="setting_log_off_account_tips4">注销后账号将无法找回</string>
    <string name="setting_log_off_account_submit">已知晓，下一步</string>
    <string name="setting_chat_notify">私聊消息推送</string>
    <string name="setting_say_hi_type">类型设置</string>
    <string name="setting_choose_say_hi_type">请选择类型</string>
    <string name="setting_say_hi_text_hint">请填写打招呼消息</string>
    <string name="setting_say_hi_audio_start_record">点击录制</string>
    <string name="setting_say_hi_picture_title">添加图片</string>
    <string name="setting_help_collect_info">个人信息收集清单</string>
    <string name="setting_help_thirty_info">三方资源共享清单</string>
    <string name="setting_help_version_check">版本更新</string>
    <string name="setting_about_us_privacy">隐私协议</string>
    <string name="setting_about_us_user">用户协议</string>
    <string name="setting_about_cancel_account_privacy">注销协议</string>
    <string name="setting_about_us_user_behavior">用户行为规则</string>
    <string name="setting_about_us_community">社区规范</string>
    <string name="setting_about_us_party">派对管理规范</string>
    <string name="setting_about_us_video">潮播管理规范</string>
    <string name="setting_about_us_anchor">主播管理规则</string>
    <string name="setting_about_us_live">直播间管理规则</string>
    <string name="setting_about_us_permission">应用权限申请与使用情况说明</string>
    <string name="setting_teenager_hint">如果忘记密码请在公众号内联系客服\n公众号：%s</string>
    <string name="setting_title_account">账号</string>
    <string name="setting_title_currency">通用</string>
    <string name="setting_title_about">关于</string>

    <!--设置-->
    <string name="setting_account_security">账号安全</string>
    <string name="setting_message_notification">消息通知</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_teenage_mode">青少年模式</string>
    <string name="setting_personal_information_collection_checklist">个人信息收集清单</string>
    <string name="setting_list_of_third_party_information_sharing">第三方信息共享清单</string>
    <string name="setting_about_us">关于我们</string>

    <!--设置_账号安全-->
    <string name="setting_change_phone_number">更换手机号</string>
    <string name="setting_login_password">登录密码</string>
    <string name="setting_real_name_authentication">实名认证</string>
    <string name="setting_cancel_account">注销账号</string>


    <string name="setting_security_update_password">修改登录密码</string>
    <string name="setting_security_new_phone">为了提高账号安全\n请输入新手机号进行绑定</string>
    <string name="setting_security_new_password">为了提高账号安全\n请设置不小于8位数字与字母的密码</string>

</resources>