<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:barStyle="transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftHorizontalPadding="16dp"
        app:leftIcon="@mipmap/common_icon_back_white"
        app:lineVisible="false"
        app:title="关于我们" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/common_app_logo" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvVersions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="@color/color_ui_sub_text"
        android:textSize="15sp" />


    <com.allen.library.SuperTextView
        android:id="@+id/stvPrivacyUrl"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="20dp"
        app:sLeftTextString="@string/setting_about_us_privacy" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvUserAgreement"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:sLeftTextString="@string/setting_about_us_user" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvUserActionAgreement"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        app:sLeftTextString="@string/setting_about_us_user_behavior" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvCommunityRule"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        app:sLeftTextString="@string/setting_about_us_anchor" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvPartyRule"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        app:sLeftTextString="@string/setting_about_us_live" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvBroadRule"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        app:sLeftTextString="@string/setting_about_us_permission" />


</LinearLayout>