<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:barStyle="transparent"
        app:leftHorizontalPadding="16dp"
        app:leftIcon="@mipmap/common_icon_back_white"
        app:lineVisible="false"
        app:title="账号安全" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvChangePhoneNumber"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="15dp"
        app:sLeftTextString="@string/setting_change_phone_number"
        app:sRightTextString=" " />

    <com.allen.library.SuperTextView
        android:id="@+id/stvLoginPassword"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:sLeftTextString="@string/setting_login_password" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvRealNameAuthentication"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:sLeftTextString="@string/setting_real_name_authentication"
        app:sRightTextString=" " />

    <com.allen.library.SuperTextView
        android:id="@+id/stvCancelAccount"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:sLeftTextString="@string/setting_cancel_account" />


</LinearLayout>