<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:barStyle="transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftHorizontalPadding="16dp"
            app:leftIcon="@mipmap/common_icon_back_white"
            app:lineVisible="false"
            app:title="系统设置" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <TextView
                    android:id="@+id/titleAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/setting_title_account"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.allen.library.SuperTextView
                    android:id="@+id/stvSettingAccountSecurity"
                    style="@style/SupperTextStyleItem"
                    android:layout_marginTop="7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleAccount"
                    app:sLeftTextString="@string/setting_account_security" />


                <TextView
                    android:id="@+id/titleCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/setting_title_currency"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:layout_constraintLeft_toLeftOf="@id/titleAccount"
                    app:layout_constraintTop_toBottomOf="@id/stvSettingAccountSecurity" />

                <com.allen.library.SuperTextView
                    android:id="@+id/stvSettingMessageNotification"
                    style="@style/SupperTextStyleItem"
                    android:layout_marginTop="7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleCurrency"
                    app:sLeftTextString="@string/setting_message_notification" />

                <com.allen.library.SuperTextView
                    android:id="@+id/stvSettingClearCache"
                    style="@style/SupperTextStyleItem"
                    app:sRightTextString=" "
                    android:layout_marginTop="7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/stvSettingMessageNotification"
                    app:sLeftTextString="@string/setting_clear_cache" />

                <com.allen.library.SuperTextView
                    android:id="@+id/stvSettingTeenageMode"
                    style="@style/SupperTextStyleItem"
                    android:layout_marginTop="7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/stvSettingClearCache"
                    app:sLeftTextString="@string/setting_teenage_mode" />

                <TextView
                    android:id="@+id/title_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/setting_title_about"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:layout_constraintLeft_toLeftOf="@id/titleAccount"
                    app:layout_constraintTop_toBottomOf="@id/stvSettingTeenageMode" />

                <com.allen.library.SuperTextView
                    android:id="@+id/stvSettingPersonalInformationCollectionChecklist"
                    style="@style/SupperTextStyleItem"
                    android:layout_marginTop="7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_about"
                    app:sLeftTextString="@string/setting_personal_information_collection_checklist" />

                <com.allen.library.SuperTextView
                    android:id="@+id/stvSettingListOfThirdPartyInformationSharing"
                    style="@style/SupperTextStyleItem"
                    android:layout_marginTop="7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/stvSettingPersonalInformationCollectionChecklist"
                    app:sLeftTextString="@string/setting_list_of_third_party_information_sharing" />

                <com.allen.library.SuperTextView
                    android:id="@+id/stv_setting_about_us"
                    style="@style/SupperTextStyleItem"
                    android:layout_marginTop="7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/stvSettingListOfThirdPartyInformationSharing"
                    app:sLeftTextString="@string/setting_about_us" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>