<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="m"
            type="com.hamster.happyness.viewmodel.SendSmsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:barStyle="transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftHorizontalPadding="16dp"
            app:leftIcon="@mipmap/common_icon_back_white"
            app:lineVisible="false"
            app:title="手机号码绑定" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/setting_bind_phone_number_hint"
            android:inputType="number"
            android:lines="1"
            android:background="@null"
            android:maxLength="11"
            android:textColor="@color/color_FE5F55"
            android:textColorHint="@color/color_80FFFFFF"
            android:textCursorDrawable="@drawable/common_edit_cursor"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar" />

        <TextView
            android:id="@+id/tv_phone_bind_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/setting_bind_phone_number_now"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phoneNumber" />


        <RelativeLayout
            android:id="@+id/rl_verification_code"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_bind_now">


            <TextView
                android:id="@+id/tvGetCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/common_btn_selector_black23_radius15_stroke2"
                android:enabled="@{m.sendSmsBtnEnable}"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/setting_get_sms_code"
                android:textColor="@drawable/common_text_color_selector_white"
                android:textSize="17sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@id/tvGetCode"
                android:background="@drawable/common_bg_black23_radius15"
                android:hint="@string/setting_sms_code_hint"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_80FFFFFF"
                android:textCursorDrawable="@drawable/common_edit_cursor"
                android:textSize="16sp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_confirm"
            commonBtnState="@{m.btnEnable}"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="34dp"
            android:gravity="center"
            android:text="@string/setting_confirm"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>